# lab_tutorials

task1/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
